# autoppia_iwa

./: .coverage  .coveragerc  .coveragerc_gate  .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  DEMO_WEBS_SETUP.md  README-DataExtractionTest.md  SEED_OPTIMIZATION_SUMMARY.md  TEST_RESULTS.md  __init__.py  chutes_llm_todo.md  conftest.py  diagram.txt  dynamic_pipeline_report.md  heuristic_rollouts.jsonl  pyproject.toml  readme.md  requirements-rl.txt  requirements.txt  setup.md  setup.py  setup.sh  sonar-project.properties  start_evaluation_service.sh  test_all_projects.py  train_ppo_agent.py  wait_and_test.sh
.github/: dependabot.yml
.github/scripts/: pip_audit_count.py  pip_audit_to_sarif.py  sonar_coverage_fix.sh
.github/workflows/: codeql.yml  coverage.yml  quality-checks.yml  rl-ci.yml  sonarcloud.yml
affine_service/: __init__.py  server.py
autoppia_iwa/: __init__.py  judge_tests_usage_logs.jsonl
autoppia_iwa/cli/: main.py
autoppia_iwa/config/: config.py  env.py
autoppia_iwa/docs/: data_extraction_easy_guide.md  data_extraction_trajectories_testing.md  de_trajectories_para_mi_12_anios.md  de_trajectories_quickstart.md  de_trajectories_summary.md  de_verification_pipeline.md
autoppia_iwa/entrypoints/: __init__.py  benchmark.py  evaluation.py  evaluation_endpoint.py  stress.py  tasks.py  test_task.py
autoppia_iwa/src/: __init__.py  benchmark.py  bootstrap.py  di_container.py  execute_my_actions_select.py
autoppia_rm/cli/: build_pairs.py  evaluate_reward_model.py  extract_llm_features.py  make_splits.py  train_reward_model.py  train_reward_model.sh  train_semantic_encoder.py  train_semantic_encoder.sh
autoppia_rm/configs/: rm_train.yaml
autoppia_rm/datasets/: build_from_evaluations.py  loaders.py
autoppia_rm/features/: snapshot_encoder.py
autoppia_rm/llm/: labeler.py
autoppia_rm/models/: reward_model.py  schemas.py
autoppia_rm/rl/: reward_wrapper.py
autoppia_rm/training/: train_reward_model.py  train_semantic_encoder.py
data/: GeneratedTests.jsonl  GeneratedTests_with_Actions.jsonl  GeneratedTests_with_Evaluation.jsonl  README.md  grouped_actions.json
data/inputs/: README.md
data/solutions_cache/: solutions.json
data/tasks_cache/: allrecipes_tasks.json  autoppia_cinema_tasks.json  jobs_demo_website_tasks.json
data/web_voyager_tasks/: web_voyager_data.jsonl
docs/: prod_data_ingestion.md  reward_model_pipeline.md  score_model_pipeline.md
docs/guides/: data_extraction.md  sandbox_analysis.md  setup.md
docs/rl/: README.md
inputs/: README.md
logs/benchmark_20250226_154848/: eval_4b4353fb-5136-41ee-98a4-b5592242d6df_FRFtgpjBxDvP99qA_20250226_155128.json
modules/affine/: README.md
modules/affine_env/: __init__.py  config.py
modules/create_web_project/: HOW_TO_SUBMIT.md  README.md
modules/debugger/: server.py
modules/dynamic_proxy/: Dockerfile  README.md  __init__.py  runner.py
modules/llm_local/: Dockerfile  requirements.txt  run_local_blip2.py  run_local_clip.py  run_local_llm.py  run_local_llm_parallel.py  setup.md  setup.sh
modules/web_project_template/: CONFIG_SCHEMA.md  README.md
modules/web_projects/: README.md
modules/web_verification/: __init__.py  __main__.py  dynamic_validation.py  generate_mutations.py  run_deck_pipeline.py  verify_project.py  visual_inspector.py
modules/webs_server/: .env.template  README.md  docker-compose.yaml  requirements.txt
outputs/dynamic_mutations_verification/: README.md
results/: benchmark_results_20250228_184432.json  stress_test_results_20250226_131945.json  stress_test_results_20250226_132640.json  stress_test_results_20250226_133045.json  stress_test_results_20250226_133159.json  stress_test_results_20250226_133259.json  stress_test_results_20250226_133359.json  stress_test_results_20250226_134345.json  stress_test_results_20250226_134423.json  stress_test_results_20250226_134607.json  stress_test_results_20250226_140105.json  stress_test_results_20250226_140300.json  stress_test_results_20250226_140337.json  stress_test_results_20250226_142601.json  stress_test_results_20250226_142836.json  stress_test_results_20250226_143012.json  stress_test_results_20250226_143602.json  stress_test_results_20250226_160949.json  stress_test_results_20250226_163712.json  stress_test_results_20250226_164752.json  stress_test_results_20250226_165109.json  stress_test_results_20250226_175611.json  stress_test_results_20250226_180427.json  stress_test_results_20250227_110804.json  stress_test_results_20250227_222541.json  stress_test_results_20250228_000856.json  stress_test_results_20250228_092531.json  stress_test_results_20250228_093657.json  stress_test_results_20250228_095333.json  stress_test_results_20250228_101238.json  stress_test_results_20250228_102612.json  stress_test_results_20250228_114516.json  stress_test_results_20250228_114659.json  stress_test_results_20250228_115659.json  stress_test_results_20250228_120341.json  stress_test_results_20250228_121642.json  stress_test_results_20250228_122636.json  stress_test_results_20250228_122749.json  stress_test_results_20250228_130011.json  stress_test_results_20250228_130400.json  (+6 more)
scripts/: README.md  callbacks.py  debug_benchmark.py  debug_benchmark_autohealth.py  debug_data_extraction_trajectories.py  debug_generate_tasks.py  debug_trajectories.py  episodes_lint.py  fetch_service_runs.py  port_forward.py  run_cache_agent_episode.py  run_demo_web_proxy.py  train_ppo_agent.py  wait_for_services_and_run_tests.sh
tests/: README.md  __init__.py  conftest.py  jobs_demo_website_tasks.json  test_di_container.py
tests/actions_tests/: test_form_actions.py  test_hold_and_left_click_drag.py  test_scroll_action.py  tests_new_actions.py
tests/benchmark/: test_benchmark_smoke.py  test_caches.py
tests/cli/: test_main.py
tests/config/: test_config.py  test_env.py
tests/data_generation/: test_complete_task_generation_pipeline.py  test_prompt_generator.py  test_tests_generator.py
tests/demo_webs/: test_classes.py  test_concrete_flow_trajectories.py  test_criterion_helper.py  test_data_provider.py  (+5 more)
(+7150 files in other folders)
