[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoppia_iwa"
version = "1.0.0"
description = "Autoppia IWA Sythetic Benchmark for Web Agents Evaluation"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["tests*", "docs*", "data*"]  # Exclude non-package directories

# Black configuration
[tool.black]
line-length = 200
target-version = ["py311"]
skip-string-normalization = true

# Ruff configuration
[tool.ruff]
line-length = 200
target-version = "py311"

fix = true  # Enables auto-fixing
unsafe-fixes = true  # Allows unsafe fixes

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E402", "E501"]

# F821 (undefined name) only in project events.py: forward refs in type hints (BackendEvent, etc.)
# avoid circular imports. F821 still reported everywhere else (e.g. missing imports).
[tool.ruff.lint.per-file-ignores]
"**/demo_webs/projects/*/events.py" = ["F821"]
"**/demo_webs/projects/base_events.py" = ["F821"]
"**/generated_projects/*/events.py" = ["F821"]

[tool.ruff.lint.isort]
known-first-party = ["autoppia_iwa"]
known-third-party = [
    "PIL", "aiohttp", "bs4", "dependency_injector", "distutils", "dotenv", "faker", "flask", "flask_cors",
    "httpx", "json_repair", "loguru", "matplotlib", "networkx", "openai", "playwright", "pydantic",
     "requests", "rich", "tiktoken", "torch", "transformers", "typing_extensions", "xmldiff"
]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--import-mode=importlib"
testpaths = ["tests"]
markers = [
    "dynamic_audit: expensive Playwright crawl over demo webs (requires RUN_DYNAMIC_AUDIT=1)",
    "integration: integration tests that require running demo webs backend and/or OPENAI_API_KEY",
]

# Optional: A section for development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "ruff>=0.3.0"
]
